force-app/main/default/objects/Research_Animal__c/Research_Animal__c.object-meta.xml
<CustomObject>
    <label>Research Animal</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Research Animal Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Research Animals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>