force-app/main/default/objects/Research_Animal__c/fields/ASPCA_Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>ASPCA_Animal_Name__c</fullName>
    <formula>Animal__r.Animal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASPCA Animal Name</label>
    <type>Text</type>
</CustomField>