force-app/main/default/objects/Research_Animal__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <formula>Animal__r.Case_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case #</label>
    <type>Text</type>
</CustomField>