force-app/main/default/objects/Research_Animal__c/fields/Post_Placement_F_U_survey__c.field-meta.xml
<CustomField>
    <fullName>Post_Placement_F_U_survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Placement / F/U survey</label>
    <type>Checkbox</type>
</CustomField>