force-app/main/default/objects/Research_Animal__c/fields/Research_Study__c.field-meta.xml
<CustomField>
    <fullName>Research_Study__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Research Study</label>
    <referenceTo>Research_Study__c</referenceTo>
    <relationshipLabel>Research Animals</relationshipLabel>
    <relationshipName>Research_Animals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>