force-app/main/default/objects/Research_Animal__c/fields/Study_Animal_Box_URL__c.field-meta.xml
<CustomField>
    <fullName>Study_Animal_Box_URL__c</fullName>
    <label>Study Animal Box URL</label>
    <type>Url</type>
</CustomField>